log/build_2025-01-31_12-55-37/robot_control/stderr.log
  File "/home/mo/Thesis/install/robot_control/lib/python3.8/site-packages/robot_control/tf_frames_publisher.py", line 177
    endtime = time.perf_counter()
    ^
SyntaxError: invalid syntax

